scss/_layouts_application-panels.scss
@mixin vf-l-application-panels {
  .p-panel {
    background: $colors--light-theme--background-default;
    color: $colors--light-theme--text-default;
    max-width: 100%;
    min-height: 100%; // make sure it fills whole container even when has little content

    &.is-dark {
      background: $colors--dark-theme--background-default;
      color: $colors--dark-theme--text-default;
    }
  }

  .p-panel__header {
    @extend %vf-grid-container-padding;

    display: flex;
  }

  .p-panel__header.is-sticky {
    position: sticky;
    top: 0;
    z-index: 1;

    .p-panel.is-dark & {
      background: $colors--dark-theme--background-default;
    }
  }

  .p-panel__content {
    @extend %section-padding--shallow;

    overflow: hidden;
  }

  .p-panel__logo {
    align-items: center;
    display: flex;
    margin-bottom: 1.25rem;
    // to center the logo inside the collapsed side navigation we have to move it a bit to the left
    // so its position is aligned with the icons of side navigation
    margin-left: -0.25rem; // (LOGO_SIZE - ICON_SIZE) / 2 = (1.5rem - 1rem) / 2 = 0.25rem
    margin-top: 1.25rem;

    .p-panel__logo-icon {
      height: 1.5rem;
    }

    .p-panel__logo-name {
      height: 1rem;
      margin-left: 0.5rem;
    }
  }

  .p-panel__tagged-logo {
    @extend %navigation-link;

    margin-left: calc(-1 * ($navigation-logo-tag-width - $navigation-logo-size) / 2);
    padding-left: $sph--x-large;

    &:hover {
      background-color: transparent !important;
    }

    &::before {
      content: none;
    }

    .p-panel__logo-tag {
      background-color: $color-accent;
      height: $navigation-logo-tag-height;
      left: 0;
      position: absolute;
      top: 0;
      width: $navigation-logo-tag-width;

      @media (min-width: $breakpoint-navigation-threshold) {
        height: $navigation-logo-tag-height-desktop;
      }

      .p-panel__logo-icon {
        bottom: $spv-navigation-logo-bottom-position;
        height: $navigation-logo-size;
        left: 50%;
        position: absolute;
        transform: translate(-50%, 0);
        width: $navigation-logo-size;
      }
    }

    .p-panel__logo-name {
      @extend %vf-heading-4;

      color: $colors--light-theme--text-default;
      font-size: #{map-get($font-sizes, h4)}rem;
      line-height: map-get($line-heights, x-small);

      .p-panel.is-dark & {
        color: $colors--dark-theme--text-default;
      }
    }
  }

  .p-panel__title {
    @extend %vf-heading-4;

    margin: 0;
    padding-bottom: $sp-medium;
    padding-top: $sp-medium;
  }

  .p-panel__controls {
    margin-left: auto;
    padding-top: $spv--medium;
  }

  .p-panel__toggle {
    cursor: pointer;
    display: block;
    margin-bottom: 1.25rem;
    margin-top: 0.25rem;
  }
}

